Fixed modal logo spacing

--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,9 @@
 .logoMaxWidth {
   max-width: 15%;
 }
+.logoMaxWidth2 {
+  max-width: 45%;
+}
 .table-layout {
   table-layout: fixed;
 }
